// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders an object widget component with clicks on each tab in root level to load all of them 1`] = `
<DocumentFragment>
  <div>
    <div
      class="ui attached tabular menu"
    >
      <a
        class="active item"
      >
        Internal
      </a>
      <a
        class="item"
      >
        External
      </a>
      <a
        class="item"
      >
        Email
      </a>
    </div>
    <div
      class="ui bottom attached segment active tab"
    >
      <div
        class="Field"
        id="internal_link-0-my-widget"
      >
        Internal link
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders an object widget component with clicks on each tab in root level to load all of them 2`] = `
<DocumentFragment>
  <div>
    <div
      class="ui attached tabular menu"
    >
      <a
        class="item"
      >
        Internal
      </a>
      <a
        class="active item"
      >
        External
      </a>
      <a
        class="item"
      >
        Email
      </a>
    </div>
    <div
      class="ui bottom attached segment active tab"
    >
      <div
        class="Field"
        id="external_link-0-my-widget"
      >
        External URL (can be relative within this site or absolute if it starts with http:// or https://)
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders an object widget component with clicks on each tab in root level to load all of them 3`] = `
<DocumentFragment>
  <div>
    <div
      class="ui attached tabular menu"
    >
      <a
        class="item"
      >
        Internal
      </a>
      <a
        class="item"
      >
        External
      </a>
      <a
        class="active item"
      >
        Email
      </a>
    </div>
    <div
      class="ui bottom attached segment active tab"
    >
      <div
        class="Field"
        id="email_address-0-my-widget"
      >
        Email address
      </div>
      <div
        class="Field"
        id="email_subject-1-my-widget"
      >
        Email subject (optional)
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders an object widget component with invalid field in value 1`] = `
<div>
  <div
    className="ui attached tabular menu"
  >
    <a
      className="active item"
      onClick={[Function]}
    >
      Internal
    </a>
    <a
      className="item"
      onClick={[Function]}
    >
      External
    </a>
    <a
      className="item"
      onClick={[Function]}
    >
      Email
    </a>
  </div>
  <div
    className="ui bottom attached segment active tab"
  >
    <div
      className="Field"
      id="internal_link-0-my-widget"
    >
      Internal link
    </div>
  </div>
</div>
`;
